--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -40,7 +40,7 @@
 <div>
     <h2>login.scala.html</h2>
 
-    <p>A very simply page containing the script provided by Auth0 to generate a log-in dialog.</p>
+    <p>A very simple page containing the script provided by Auth0 to generate a log-in dialog.</p>
 </div>
 </body>
 </html>
